@@ -135,6 +135,7 @@
     <branch id="HEAD"/>
   </module>
   <module id="criawips">
+    <maintainer id="herzi"/>
     <defaults>
       <branch>
         <domain id="po">
