@@ -41,6 +41,14 @@
     <webpage>http://blog.ekiga.net</webpage>
     <icon>http://planet.gnome.org/heads/damien.png</icon>
   </person>
+  <person id="herzi">
+    <name>Sven Herzberg</name>
+    <email>herzberg.sven@gmail.com</email>
+    <nick>herzi</nick>
+    <webpage>http://www.herzi.eu/</webpage>
+    <icon>http://planet.gnome.org/heads/herzi.png</icon>
+    <bugzilla-account>herzi@gnome-de.org</bugzilla-account>
+  </person>
   <person id="murrayc">
     <name>Murray Cumming</name>
     <email>murrayc@murrayc.com</email>
