@@ -1,3 +1,8 @@
+2007-07-26  Sven Herzberg  <herzi@gnome-de.org>
+
+	* people.xml.in: added my, myself and I
+	* gnome-modules.xml.in: added the criawips maintainer
+
 2007-07-25  Claude Paroz <claude@2xlibre.net>
 
 	* releases.xml.in: Removed extra dots. Fixes bug #460058.
